--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ const firebaseConfig = {
   messagingSenderId: "973325762370",
   appId: "1:973325762370:web:4fb97306806bbe6cc0d2db"
 };
+
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
@@ -43,11 +44,11 @@ const headlineText = document.getElementById("headlineText");
 let editingId = null;
 let currentPosts = [];
 
-// Login/Logout
+// Login & Logout
 loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
 logoutBtn.onclick = ()=>signOut(auth);
 
-// Auth State
+// Auth state
 onAuthStateChanged(auth,user=>{
   if(user && user.email===ADMIN_EMAIL){
     editorArea.classList.remove("hidden");
@@ -62,7 +63,7 @@ onAuthStateChanged(auth,user=>{
   }
 });
 
-// Add Text/Image Blocks
+// Admin: Add Text/Image
 document.getElementById("addTextBtn").onclick = ()=>{
   const t = document.createElement("textarea");
   t.placeholder = "Write paragraph...";
@@ -104,58 +105,66 @@ document.getElementById("publishBtn").onclick = async()=>{
   aTitle.value=aCat.value=""; blocksList.innerHTML="";
 }
 
+// Admin Notice
+document.getElementById("saveNoticeBtn").onclick=async()=>{
+  await setDoc(doc(db,"settings","notice"),{text:noticeInput.value.trim()});
+}
+
 // Load Posts
 onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
   currentPosts = snap.docs.map(d=>({id:d.id,...d.data()}));
   renderPosts();
 });
 
-// Render Posts with Image Slider & Card Click
+// Load Notice
+onSnapshot(doc(db,"settings","notice"),snap=>{
+  noticeText.textContent = snap.exists()?snap.data().text:"";
+  startNoticeScroll();
+});
+
+// Render Posts
 function renderPosts(){
   postsArea.innerHTML="";
   currentPosts.forEach((d,i)=>{
     const firstImg = d.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
     const firstText = d.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
     const card = document.createElement("div");
-    card.className="card cursor-pointer";
+    card.className="card";
     card.innerHTML = `<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
-    card.onclick = ()=>alert(`Open news: ${d.title}`); // For now, alert; replace with modal if needed
+    card.onclick=()=>showModal(d);
     postsArea.appendChild(card);
   });
-
-  // Image Slider Animation
-  const sliderImgs = document.querySelectorAll(".card-img");
-  let idx = 0;
-  setInterval(()=>{
-    sliderImgs.forEach(img=>img.style.display="none");
-    if(sliderImgs[idx]) sliderImgs[idx].style.display="block";
-    idx = (idx+1)%sliderImgs.length;
-  },3000);
-
   // Headline ticker
-  headlineText.textContent=currentPosts.slice(0,5).map(p=>p.title).join(" — ");
+  headlineText.textContent = currentPosts.slice(0,5).map(p=>p.title).join(" — ");
 }
 
-// Toggle Menu
-function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
+// Modal
+const modalBg = document.getElementById("modalBg");
+const modalContent = document.getElementById("modalContent");
+function showModal(post){
+  modalContent.innerHTML = `<button class="modal-close" onclick="closeModal()">X</button>
+    <h2>${post.title}</h2>`;
+  post.blocks.forEach(b=>{
+    if(b.type==="text") modalContent.innerHTML += `<p>${b.text}</p>`;
+    else modalContent.innerHTML += `<img src="${b.url}" class="modal-img">`;
+  });
+  modalBg.style.display="flex";
+}
+function closeModal(){modalBg.style.display="none";}
 
-// Scroll Ticker
-function startTicker(el){
-  const text = el;
-  let pos = el.parentElement.offsetWidth;
+// Notice Scroll JS
+function startNoticeScroll(){
+  const textEl = document.getElementById("noticeText");
+  let pos = textEl.parentElement.offsetWidth;
   function animate(){
     pos -= 1;
-    if(pos < -text.scrollWidth) pos = el.parentElement.offsetWidth;
-    text.style.transform = `translateX(${pos}px)`;
+    if(pos < -textEl.offsetWidth) pos = textEl.parentElement.offsetWidth;
+    textEl.style.transform = `translateX(${pos}px)`;
     requestAnimationFrame(animate);
   }
   animate();
 }
 
-document.addEventListener("DOMContentLoaded",()=>{
-  startTicker(document.getElementById("noticeText"));
-  startTicker(document.getElementById("headlineText"));
-});
 </script>
 
 <style>
@@ -163,63 +172,16 @@ body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
 .nav-btn, .auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.auth-btn{font-size:12px;} /* chhota logout button */
 .nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
-.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:50px;z-index:300;}
-.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:74px;z-index:300;}
+.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:50px;z-index:300;height:24px;}
+.ticker-text{display:inline-block;white-space:nowrap;will-change:transform;}
+.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:74px;z-index:299;height:24px;}
 .posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);transition:transform 0.2s;position:relative;}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;}
 .card:hover{transform:scale(1.02);}
-.card img{width:100%;height:200px;object-fit:cover;display:block;}
+.card-img{width:100%;height:200px;object-fit:cover;}
 .card-body{padding:8px;}
 .card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
 .card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
-.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
-.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-</style>
-</head>
-<body>
-
-<header class="flex justify-between items-center">
-  <div class="flex items-center space-x-2">
-    <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="Logo">
-    <h1 class="font-bold text-base sm:text-lg">Marathi Crime Files</h1>
-  </div>
-  <div class="relative">
-    <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
-    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden z-[10000]">
-      <button class="dropdown-btn">Story</button>
-      <button class="dropdown-btn">Gumshuda</button>
-      <button class="dropdown-btn">Lawarish</button>
-      <button class="dropdown-btn">Crime</button>
-    </div>
-  </div>
-  <div class="flex space-x-1">
-    <button id="loginBtn" class="auth-btn bg-green-500 text-white px-2 py-1 text-sm">Login</button>
-    <button id="logoutBtn" class="auth-btn bg-red-600 text-white px-2 py-1 text-sm hidden">Logout</button>
-  </div>
-</header>
-
-<div class="notice-ticker"><span id="noticeText"></span></div>
-<div class="headline-ticker"><span id="headlineText"></span></div>
-
-<section id="editorArea" class="editor hidden">
-  <h2>🖋️ Admin: Create/Edit News</h2>
-  <input id="aTitle" placeholder="Title">
-  <input id="aCat" placeholder="Category">
-  <div id="blocksList"></div>
-  <button id="addTextBtn">Add Text</button>
-  <button id="addImageBtn">Add Image</button>
-  <button id="publishBtn">Publish</button>
-</section>
-
-<section id="postsArea" class="posts-grid"></section>
-
-<section id="noticeEditor" class="editor hidden">
-  <h2>📰 Admin Notice</h2>
-  <input id="noticeInput" placeholder="Enter notice text...">
-  <button id="saveNoticeBtn">Save Notice</button>
-</section>
-
-</body>
-</html>
+.editor{padding:12px;background:#fff;margin:6px;border
