--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ const db = getFirestore(app);
 const provider = new GoogleAuthProvider();
 const ADMIN_EMAIL = "gulistankh2011@gmail.com";
 
-// DOM Elements
+// DOM
 const loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const editorArea = document.getElementById("editorArea");
@@ -44,11 +44,10 @@ const headlineText = document.getElementById("headlineText");
 let editingId = null;
 let currentPosts = [];
 
-// Login & Logout
+// 🔹 Login/Logout
 loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
 logoutBtn.onclick = ()=>signOut(auth);
 
-// Auth state
 onAuthStateChanged(auth,user=>{
   if(user && user.email===ADMIN_EMAIL){
     editorArea.classList.remove("hidden");
@@ -63,7 +62,7 @@ onAuthStateChanged(auth,user=>{
   }
 });
 
-// Admin: Add Text/Image
+// 🔹 Admin Add Text/Image Blocks
 document.getElementById("addTextBtn").onclick = ()=>{
   const t = document.createElement("textarea");
   t.placeholder = "Write paragraph...";
@@ -79,7 +78,7 @@ document.getElementById("addImageBtn").onclick = ()=>{
   blocksList.appendChild(inp);
 }
 
-// Publish News
+// 🔹 Publish News
 document.getElementById("publishBtn").onclick = async()=>{
   const title = aTitle.value.trim();
   const cat = aCat.value.trim();
@@ -88,6 +87,7 @@ document.getElementById("publishBtn").onclick = async()=>{
   for(const el of blocksList.children){
     if(el.dataset.type==="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
     else if(el.type==="file" && el.files.length>0){
+      // IMGBB Upload
       const formData = new FormData();
       formData.append("image",el.files[0]);
       const res = await fetch(`https://api.imgbb.com/1/upload?key=2387b6e1ec3474b6df29aaa462344077`,{method:"POST",body:formData});
@@ -105,24 +105,13 @@ document.getElementById("publishBtn").onclick = async()=>{
   aTitle.value=aCat.value=""; blocksList.innerHTML="";
 }
 
-// Admin Notice
-document.getElementById("saveNoticeBtn").onclick=async()=>{
-  await setDoc(doc(db,"settings","notice"),{text:noticeInput.value.trim()});
-}
-
-// Load Posts
+// 🔹 Load Posts
 onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
   currentPosts = snap.docs.map(d=>({id:d.id,...d.data()}));
   renderPosts();
 });
 
-// Load Notice
-onSnapshot(doc(db,"settings","notice"),snap=>{
-  noticeText.textContent = snap.exists()?snap.data().text:"";
-  startNoticeScroll();
-});
-
-// Render Posts
+// 🔹 Render Posts
 function renderPosts(){
   postsArea.innerHTML="";
   currentPosts.forEach((d,i)=>{
@@ -131,57 +120,136 @@ function renderPosts(){
     const card = document.createElement("div");
     card.className="card";
     card.innerHTML = `<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
-    card.onclick=()=>showModal(d);
+    card.onclick = ()=>showModal(d);
     postsArea.appendChild(card);
   });
+
   // Headline ticker
-  headlineText.textContent = currentPosts.slice(0,5).map(p=>p.title).join(" — ");
+  headlineText.textContent=currentPosts.slice(0,5).map(p=>p.title).join(" — ");
+
+  // Image slider animation
+  startSlider();
 }
 
-// Modal
+// 🔹 Modal
 const modalBg = document.getElementById("modalBg");
 const modalContent = document.getElementById("modalContent");
+document.getElementById("modalClose").onclick = ()=>modalBg.style.display="none";
 function showModal(post){
-  modalContent.innerHTML = `<button class="modal-close" onclick="closeModal()">X</button>
-    <h2>${post.title}</h2>`;
+  modalContent.innerHTML = `<h2 class='text-lg font-bold mb-2'>${post.title}</h2>`;
   post.blocks.forEach(b=>{
-    if(b.type==="text") modalContent.innerHTML += `<p>${b.text}</p>`;
-    else modalContent.innerHTML += `<img src="${b.url}" class="modal-img">`;
+    if(b.type==="text") modalContent.innerHTML += `<p class='mb-2 text-gray-800'>${b.text}</p>`;
+    else modalContent.innerHTML += `<img src='${b.url}' class='image-zoom mb-2'>`;
   });
   modalBg.style.display="flex";
 }
-function closeModal(){modalBg.style.display="none";}
 
-// Notice Scroll JS
-function startNoticeScroll(){
-  const textEl = document.getElementById("noticeText");
-  let pos = textEl.parentElement.offsetWidth;
-  function animate(){
-    pos -= 1;
-    if(pos < -textEl.offsetWidth) pos = textEl.parentElement.offsetWidth;
-    textEl.style.transform = `translateX(${pos}px)`;
-    requestAnimationFrame(animate);
-  }
-  animate();
+// 🔹 Image Slider for posts
+let sliderIndex = 0;
+function startSlider(){
+  const images = document.querySelectorAll(".card-img");
+  if(images.length===0) return;
+  images.forEach((img,i)=>img.style.display="none");
+  images[sliderIndex].style.display="block";
+  setInterval(()=>{
+    images.forEach(img=>img.style.display="none");
+    sliderIndex = (sliderIndex+1)%images.length;
+    images[sliderIndex].style.display="block";
+  },3000);
 }
 
+// 🔹 Menu Toggle
+function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
+
+// 🔹 Save Notice
+document.getElementById("saveNoticeBtn").onclick = async()=>{
+  const text = noticeInput.value.trim();
+  await setDoc(doc(db,"settings","notice"),{text});
+}
+
+// 🔹 Load Notice
+const noticeRef = doc(db,"settings","notice");
+onSnapshot(noticeRef,snap=>{
+  noticeText.textContent = snap.exists()?snap.data().text:"";
+  // scrolling animation restart
+  const ticker = document.querySelector(".ticker-text");
+  ticker.style.animation = "none";
+  void ticker.offsetWidth;
+  ticker.style.animation = null;
+});
 </script>
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.nav-btn, .auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
-.auth-btn{font-size:12px;} /* chhota logout button */
+.nav-btn,.auth-btn{padding:3px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;font-size:12px;}
 .nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
-.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:50px;z-index:300;height:24px;}
-.ticker-text{display:inline-block;white-space:nowrap;will-change:transform;}
-.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:74px;z-index:299;height:24px;}
+.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:60px;z-index:250;}
+.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 15s linear infinite;}
+@keyframes scrollNotice{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
+.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;}
 .posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
 .card:hover{transform:scale(1.02);}
-.card-img{width:100%;height:200px;object-fit:cover;}
+.card-img{width:100%;height:auto;object-fit:contain;display:block;}
 .card-body{padding:8px;}
 .card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
 .card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.editor{padding:12px;background:#fff;margin:6px;border
+.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
+.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
+/* Modal */
+#modalBg{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:1000;}
+#modalContent{background:#fff;padding:12px;border-radius:8px;max-height:90vh;overflow-y:auto;width:90%;max-width:600px;}
+#modalClose{position:absolute;top:8px;right:12px;cursor:pointer;font-weight:bold;color:red;}
+</style>
+</head>
+<body>
+
+<header class="flex justify-between items-center">
+  <div class="flex items-center space-x-2">
+    <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="Logo">
+    <h1 class="font-bold text-base sm:text-lg">Marathi Crime Files</h1>
+  </div>
+  <div class="relative">
+    <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
+    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden z-[10000]">
+      <button class="dropdown-btn">Story</button>
+      <button class="dropdown-btn">Gumshuda</button>
+      <button class="dropdown-btn">Lawarish</button>
+      <button class="dropdown-btn">Crime</button>
+    </div>
+  </div>
+  <div class="flex space-x-1">
+    <button id="loginBtn" class="auth-btn bg-green-500 text-white">Login</button>
+    <button id="logoutBtn" class="auth-btn bg-red-600 text-white hidden">Logout</button>
+  </div>
+</header>
+
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
+<div class="headline-ticker"><span id="headlineText"></span></div>
+
+<section id="editorArea" class="editor hidden">
+  <h2>🖋️ Admin: Create/Edit News</h2>
+  <input id="aTitle" placeholder="Title">
+  <input id="aCat" placeholder="Category">
+  <div id="blocksList"></div>
+  <button id="addTextBtn">Add Text</button>
+  <button id="addImageBtn">Add Image</button>
+  <button id="publishBtn">Publish</button>
+</section>
+
+<section id="postsArea" class="posts-grid"></section>
+
+<section id="noticeEditor" class="editor hidden">
+  <h2>📰 Admin Notice</h2>
+  <input id="noticeInput" placeholder="Enter notice text...">
+  <button id="saveNoticeBtn">Save Notice</button>
+</section>
+
+<!-- Modal -->
+<div id="modalBg"><div id="modalContent"><span id="modalClose">X</span></div></div>
+
+</body>
+</html>
